# effector

./: .gitignore  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-build-docs.txt  requirements-dev.txt  requirements-test.txt  requirements-tutorials.txt  requirements.txt  setup.py  todo.org
AISTATS2023/: _region_.tex  aistats2023.sty  biblio.bib  paper.tex  paper_old.tex  sample_paper.tex  supplement.tex
acml/: acml22.bib  acml22_paper.aux  acml22_paper.bbl  acml22_paper.blg  acml22_paper.out  acml22_paper.tex  jmlr.cls  spiral.eps
docs/: API.md  README.md  doc.md  mkdocs.yml
effector/: __init__.py  ale.py  axis_partitioning.py  bin_estimation.py  bin_splitting.py  binning_methods.py  datasets.py  fe_base.py  global_effect.py  global_effect_ale.py  global_effect_pdp.py  global_effect_rhale.py  global_effect_shap.py  helpers.py  interaction.py  models.py  partitioning.py  pdp.py  regional_effect.py  regional_effect_ale.py  regional_effect_pdp.py  regional_effect_shap.py  regions.py  rhale.py  space_partitioning.py  tree.py  utils.py  utils_integrate.py  visualization.py
example_models/: distributions.py  models.py
examples/: 01_bike_sharing_dataset.py  01_linear_model.py  02_rhale_vs_ale_vs_pdp.py  03_bike_sharing_dataset.py  03_regional_effects_pdp_vs_rhale.py  bullet_1.py  bullet_2.py  bullet_3.py  bullet_4.py  concept_figure.py  dale_paper_OOD.py  dale_paper_real_dataset_1_accuracy.py  dale_paper_real_dataset_1_efficiency.py  dale_paper_synthetic_dataset_accuracy.py  dale_paper_synthetic_dataset_efficiency.py  differences_examples.py  example_1.py  example_2.py  example_3.py  example_bin_splitting_1.py  example_bin_splitting_2.py  example_gromping_paper.py  example_sinc.py  example_utils.py  execution_time_insights.py  linear_example.py  real_bike_sharing.py  real_dataset_1.py  real_dataset_2.py  real_dataset_3.py  rhale_toy.py  simple_example.py  simple_example_2.py  simple_repid.py  synthetic_linear.py  synthetic_piecewise_linear.py  synthetic_repid.ipynb  synthetic_repid.py  synthetic_repid_third_degree.ipynb  synthetic_repid_third_degree.py  (+1 more)
feature_effect/: __init__.py  ale.py  bin_estimation.py  dale.py  estimator.py  helpers.py  pdp.py  utils.py  utils_integrate.py  visualization.py
mdale/: ale.py  ale2.py  dale.py  utils.py
notebooks/: example_1.ipynb  example_2-Copy1.ipynb  example_2.ipynb  mdale_example_1.ipynb  mdale_example_2.ipynb
paper/: paper_in_bullets.aux  paper_in_bullets.out  paper_in_bullets.tex  summary.tex
pythia/: __init__.py  ale.py  bin_estimation.py  binning_methods.py  dale.py  estimator.py  fe_base.py  helpers.py  interaction.py  mplot.py  pdp.py  regions.py  rhale.py  utils.py  utils_integrate.py  visualization.py
real-examples/: 01_bike_sharing_dataset.ipynb
report/: california_housing.py  main_paper.tex  real_bike_sharing.py  real_bike_sharing_tfdf.py  report.bib  report.tex  report_utils.py  synthetic_repid.py
research/: README.md  ideas.tex
scripts/: 01_bike_sharing_dataset-Copy1.py  01_bike_sharing_dataset.py  05_conditional_interaction_independent_uniform_global.py  experiment.py  quickstart_1.py  test.py  test_1.py  test_2.py  test_3.py  test_bike_sharing.py  test_synthetic.py
synthetic-examples/: 01_linear_model.ipynb  02_global_effect_methods_comparison.ipynb  02_regional_rhale.ipynb  02_rhale_vs_ale_vs_pdp.ipynb  03_regional_effects_pdp_vs_rhale.ipynb  03_regional_effects_synthetic_f.ipynb  04_regional_effects_real_f.ipynb
tests/: notebook_execution.py  test_2d_example.py  test_2d_example_linear.py  test_2d_example_non_linear_1.py  test_2d_example_piecewise_linear.py  test_2d_example_sinc.py  test_3d_example_linear.py  test_bin_estimation.py  test_datasets.py  test_functional.py  test_functional_gam.py  test_functional_linear.py  test_functional_pdp.py  test_functional_rhale.py  test_functional_shap.py  test_models.py  test_plots.py  test_regional_1.py  test_regional_2.py  test_regional_methods.py  test_tree.py  (+2 more)
(+202 files in other folders)
