[build-system]
#requires = ["setuptools", "setuptools-scm"]
#build-backend = "setuptools.build_meta"
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.setuptools]
packages = ['effector']
package-dir = {'effector'='effector'}

[project]
name = "effector"
description = "An eXplainable AI package for tabular data."
authors = [{name = "Vasilis Gkolemis", email = "ntipakos@gmail.com"}]
maintainers = [
    {name = "Christos Diou", email = "cdiou@hua.gr"},
    {name = "Julia Herbinger", email = "julia.herbinger@gmail.com"},
    {name = "Giuseppe Casalicchio", email = "giuseppe.casalicchio@gmail.com"},
    {name = "Hubert Baniecki", email = "h.baniecki@uw.edu.pl"},
    {name = "Dimitris Kyriakopoulos", email = "dimitrisskyriakopoulos@gmail.com"},
    {name = "Dimitrios Rontogiannis", email = "dimronto@gmail.com"}
]
license = {text = "MIT License"}
requires-python = ">=3.10"
keywords = ["explainability", "interpretability", "machine learning", "deep learning", "regional XAI", "feature effect"]
version = "0.1.11"
readme = "README.md"
dependencies = [
    "matplotlib",
    "numpy",
    "scipy",
    "tqdm",
    "shap",
    "shapiq",
    "ucimlrepo"
]

[project.urls]
documentation = "https://xai-effector.github.io"
source = "https://github.com/givasile/effector"
tracker = "https://github.com/givasile/effector/issues"

[project.optional-dependencies]
tutorials = ["ipython", "pandas", "tensorflow-cpu", "keras", "ucimlrepo", "jupyter", "openml", "tabpfn"]